26.dec (og)
	-exportly: Fixed bug in triplets of chords. Tried to update outdated code on
	keychanges.
24.dec (ws)
      - allow editing of text properties for chord names
23.dec (og)
	Exportly: Flat symbol in instrumentnames are now handled. Some
	progress on reconciling rehearsalmarks and segno/coda-symbols.
22.dec (la)
      - uncomment workaround for set(QT_USE_QTSCRIPTTOOLS TRUE) for ubuntu users
        see http://www.musescore.org/en/node/3475
      (db)
      - update handbooks (includes license statement, fix missing images)
      - update handbook script (images, refine link checking, fix style removal)
20.dec (ws)
      - key signature updates; changed the format for custom key signatures
19.dec (ws)
      - custom key signatures are now usable; in the current implementation they
        are only graphical symbols with no semantic on pitch etc.
      - make key signature palette persistent
      - make time signature palette persistent
18.dec (ws)
      - started custom key signature editor as experimental feature
      (la)
      - fix group of menu items for plugins
      - add saveMscz() in plugin framework
      (db)
      - change measure stretch shortcuts from "Shift++" and "Shift+-" to "{"
        and "}" (avoids conflict with "+" for ties on US keyboards)
      - change preferences.cpp to UTF-8 (it was opening as ASCII for me and
        corrupting the language choices text)
17.dec (ws)
      - Changed accidental handling; accidental buttons in top note input
        tool bar work as "add accidental" command button to all selected notes
        independent of note input mode. Alternate method is to drag/drop from
        the accidental palette.
      (og)
      - exportly: stafftext and dynamics on same note.
      - exportly: export fermatas on rests
16.dec (ws)
      - fix: Add copyright text crash
      - all accidentals can now have brackets: drag bracket symbol on accidental
      (la)
      - expose more metadata to plugin framework